[package]
name = "appindicator3"
version = "0.1.0"
edition = "2021"

[lib]
name = "appindicator3"

[dependencies]
libc = "0.2"

[dependencies.glib]
package = "glib"
git = "https://github.com/gtk-rs/gtk-rs-core"
version = "0.15.1"
branch = "0.15"

[dependencies.gtk]
package = "gtk"
git = "https://github.com/gtk-rs/gtk3-rs"
version = "0.15.1"
branch = "0.15"

[dependencies.gdk]
package = "gdk"
git = "https://github.com/gtk-rs/gtk3-rs"
version = "0.15.1"
branch = "0.15"

[dependencies.ffi]
package = "appindicator3-sys"
path = "sys/" 

[dependencies.gdk-sys]
package = "gdk-sys"
git = "https://github.com/gtk-rs/gtk3-rs"
version = "0.15.1"
branch = "0.15"

[features]
v0_5 = ["ffi/v0_5"]
dox = ["ffi/dox"]
default = ["v0_5"]

[package.metadata.docs.rs]
features = ["dox"]
