[package]
name = "appindicator3"
categories = ["api-bindings", "gui"]
repository = "https://github.com/rehar/appindicator3"
license = "MIT"
description = "Rust bindings for the AppIndicator and AyatanaAppIndicator library"
author = "Rene Harder"
version = "0.3.0"
edition = "2021"
keywords = ["appindicator", "libappindicator", "ayatana-appindicator", "SNI", "KSNI"]

exclude = [
    "gir-files/*",
]

[lib]
name = "appindicator3"

[dependencies]
libc = "0.2"
glib = "0.18"
gtk = "0.18"
gdk = "0.18"
gdk-sys = "0.18"

[dependencies.ffi]
package = "appindicator3-sys"
version = "0.0.4"
path = "sys/" 

[features]
v0_4 = ["ffi/v0_4"]
v0_5 = ["ffi/v0_5"]
original = ["ffi/original"]
dox = ["ffi/dox"]
default = ["v0_5"]

[package.metadata.docs.rs]
features = ["dox"]
