[package]
name = "appindicator3-sys"
version = "0.0.1"
edition = "2021"
build = "build.rs"

[package.metadata.system-deps.appindicator3]
name = "appindicator3-0.1"
version = "0"

[package.metadata.system-deps.appindicator3.v0_5]
version = "0.5"

[package.metadata.docs.rs]
features = ["dox"]

[lib]
name = "appindicator3_sys"

[dependencies]
libc = "0.2"

[dependencies.glib]
package = "glib-sys"
git = "https://github.com/gtk-rs/gtk-rs-core"
version = "0.15.1"
branch = "0.15"

[dependencies.gobject]
package = "gobject-sys"
git = "https://github.com/gtk-rs/gtk-rs-core"
version = "0.15.1"
branch = "0.15"

[dependencies.gtk]
package = "gtk-sys"
git = "https://github.com/gtk-rs/gtk3-rs"
version = "0.15.1"
branch = "0.15"

[dependencies.gdk]
package = "gdk-sys"
git = "https://github.com/gtk-rs/gtk3-rs"
version = "0.15.1"
branch = "0.15"

[build-dependencies]
system-deps = "6"

[dev-dependencies]
shell-words = "1.0.0"
tempfile = "3"

[features]
v0_5 = []
dox = []
