[package]
name = "appindicator3-sys"
version = "0.0.1"
edition = "2021"
build = "build.rs"

[package.metadata.docs.rs]
features = ["dox"]

[lib]
name = "appindicator3_sys"

[dependencies]
libc = "0.2"

[dependencies.glib]
package = "glib-sys"
git = "https://github.com/gtk-rs/gtk-rs-core"
version = "0.15"
branch = "0.15"

[dependencies.gobject]
package = "gobject-sys"
git = "https://github.com/gtk-rs/gtk-rs-core"
version = "0.15"
branch = "0.15"

[dependencies.gtk]
package = "gtk-sys"
git = "https://github.com/gtk-rs/gtk3-rs"
version = "0.15"
branch = "0.15"

[dependencies.gdk]
package = "gdk-sys"
git = "https://github.com/gtk-rs/gtk3-rs"
version = "0.15"
branch = "0.15"

[build-dependencies]
pkg-config = "0.3.24"

[dev-dependencies]
shell-words = "1.0.0"
tempfile = "3"

[features]
v0_4 = []
v0_5 = []
original = []
dox = []
