[package]
name = "appindicator3-sys"
version = "0.0.4"
edition = "2021"
build = "build.rs"
license = "MIT"
description = "FFI bindings for the AppIndicator and AyatanaAppIndicator library"
keywords = ["ffi"]
repository = "https://github.com/rehar/appindicator3"

[package.metadata.docs.rs]
features = ["dox"]

[lib]
name = "appindicator3_sys"

[dependencies]
libc = "0.2"

[dependencies.glib]
package = "glib-sys"
version = "0.18"

[dependencies.gobject]
package = "gobject-sys"
version = "0.18"

[dependencies.gtk]
package = "gtk-sys"
version = "0.18"

[dependencies.gdk]
package = "gdk-sys"
version = "0.18"

[build-dependencies]
pkg-config = "0.3.24"

[dev-dependencies]
shell-words = "1.0.0"
tempfile = "3"

[features]
v0_4 = []
v0_5 = []
original = []
dox = []
